--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <a href="#contact" class="cta-btn">Get a Free Quote</a>
     </div>
     <div class="hero-img">
-      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Clean living room couch">
+      <img src="file:///Users/scarybmoravian.edu/Downloads/ChatGPT%20Image%20Jul%209,%202025,%2007_55_04%20PM.png" alt="BM Clean Co Logo">
     </div>
   </section>
 
