--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <a href="#contact" class="cta-btn">Get a Free Quote</a>
     </div>
     <div class="hero-img">
-      <img src="file:///Users/scarybmoravian.edu/Downloads/ChatGPT%20Image%20Jul%209,%202025,%2007_55_04%20PM.png" alt="BM Clean Co Logo">
+      <img src="images/ChatGPT Image Jul 9, 2025, 07_55_04 PM.png" alt="ChatGPT Image"> alt="BM Clean Co Logo">
     </div>
   </section>
 
