--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
       min-width: 260px;
       padding: 1rem;
     }
+    .hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
     .hero-content h2 {
       font-size: 2rem;
       margin-top: 0;
@@ -239,9 +245,7 @@
       <p>BM Clean Co. provides reliable, eco-friendly cleaning services for residential and commercial spaces in the Lehigh Valley. Trusted, insured, and satisfaction guaranteed.</p>
       <a href="#contact" class="cta-btn">Get a Free Quote</a>
     </div>
-    <div class="hero-img">
-      <img src="images/ChatGPT Image Jul 9, 2025, 07_55_04 PM.png" alt="ChatGPT Image"> alt="BM Clean Co Logo">
-    </div>
+   
   </section>
 
   <section id="services" class="services">
